2006/4/17 -- released version 20060417_trunk

* brought back the FPing.pm 'timeout' parameter, since it does something 
  after all. - niko, requested by Peter Klausner <peter.klausner *gmail.com>

2006/4/16 -- released version 20060416_trunk

2006/4/15 -- released version 20060415_trunk

* adjusted links to new home on oss.oetiker.ch
  -- tobi

2006/4/14 -- released version 20060414_trunk

2006/4/13 -- released version 20060413_trunk

2006/4/12 -- released version 20060412_trunk

2006/4/11 -- released version 20060411_trunk

2006/4/10 -- released version 20060410_trunk

2006/4/9 -- released version 20060409_trunk

2006/4/8 -- released version 20060408_trunk

2006/4/7 -- released version 20060407_trunk

2006/4/6 -- released version 20060406_trunk

2006/4/5 -- released version 20060405_trunk

2006/4/4 -- released version 20060404_trunk

2006/4/3 -- released version 20060403_trunk

2006/4/2 -- released version 20060402_trunk

2006/4/1 -- released version 20060401_trunk

2006/3/31 -- released version 20060331_trunk

2006/3/30 -- released version 20060330_trunk

2006/3/29 -- released version 20060329_trunk

2006/3/28 -- released version 20060328_trunk

2006/3/27 -- released version 20060327_trunk

2006/3/26 -- released version 20060326_trunk

2006/3/25 -- released version 20060325_trunk

* let the name of the dns server be configured in DNS.pm
  -- ark <yesv *ring.wtwf.com>

2006/3/24 -- released version 20060324_trunk

2006/3/23 -- released version 20060323_trunk

2006/3/22 -- released version 20060322_trunk

2006/3/21 -- released version 20060321_trunk

2006/3/20 -- released version 20060320_trunk

2006/3/19 -- released version 20060319_trunk

2006/3/18 -- released version 20060318_trunk

2006/3/17 -- released version 20060317_trunk

2006/3/16 -- released version 20060316_trunk

2006/3/15 -- released version 20060315_trunk

2006/3/14 -- released version 20060314_trunk

2006/3/13 -- released version 20060313_trunk

2006/3/12 -- released version 20060312_trunk
